styles/style.css
@font-face {
	font-family: "Press Start";
	src: url("../assets/fonts/PressStart2P-Regular.ttf") format("truetype");
}

*{
    font-family: "Press Start";
    font-size: 100%;
    color:white;
    hyphens: auto;
}

em{
    font-family: cursive;
    font-size: 150%;
    color: plum;
}

h1{
    font-size: 120%;
    color: palegreen;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}
h2{
    font-size: 110%;
    color:antiquewhite;
    text-decoration: underline;
}

._31x88, ._31x88 > *{
    height: 100%;
    width: 100%;
}
.center{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

body{
    background: black;
    display: grid;
    grid-template-columns: 1fr 2fr 2fr;
    grid-template-rows: 1fr 8fr 1fr;
}

header{
    grid-row: 1;
    grid-column: 1 / span 3;
    
    display:grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr;

    border: solid plum;

    margin: 5px;
    border-radius: 10px;
}
header > p.center{
    grid-row: 2;
    grid-column: 1 / span 3;
}
toprow{
    grid-column: 1 / span 3;
    grid-row: 1;

    display: flex;
    justify-content: center;
    align-items: center;
}

aside{
    grid-column: 1;
    grid-row: 2;
    padding: 4%;
    background: purple;
    border-radius: 10px;
    margin:5px;
}

main{
    grid-column: 2/span 2;
    grid-row: 2;
    padding: 2%;
    padding-top: 1%;

    border: 5px solid green;
    margin: 5px;
    border-radius: 10px;
}

footer{
    grid-row: 3;
    grid-column: 1 / span 3;
    border: 5px dashed teal;
    margin: 10px;
    border-radius: 10px;
}

